fix: increase shark opacity to make them visible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,8 +133,7 @@ img { display: block; max-width: 100%; }
 }
 .shark {
   position: absolute;
-  color: rgba(212, 175, 55, .06);
-  filter: blur(1px);
+  color: rgba(212, 175, 55, .15);
 }
 .shark.s1 {
   width: 180px; top: 15%; left: -180px;
@@ -143,45 +142,46 @@ img { display: block; max-width: 100%; }
 }
 .shark.s2 {
   width: 120px; top: 55%; left: -120px;
-  color: rgba(212, 175, 55, .04);
+  color: rgba(212, 175, 55, .10);
   animation: swim-right 22s linear infinite;
   animation-delay: 4s;
 }
 .shark.s3 {
   width: 200px; top: 75%; right: -200px;
+  color: rgba(212, 175, 55, .12);
   animation: swim-left 20s linear infinite;
   animation-delay: 2s;
   transform: scaleX(-1);
 }
 .shark.s4 {
   width: 90px; top: 35%; left: -90px;
-  color: rgba(212, 175, 55, .08);
+  color: rgba(212, 175, 55, .18);
   animation: swim-right 15s linear infinite;
   animation-delay: 7s;
 }
 .shark.s5 {
   width: 150px; top: 85%; right: -150px;
-  color: rgba(212, 175, 55, .03);
+  color: rgba(212, 175, 55, .08);
   animation: swim-left 25s linear infinite;
   animation-delay: 1s;
   transform: scaleX(-1);
 }
 .shark.s6 {
   width: 100px; top: 25%; right: -100px;
-  color: rgba(212, 175, 55, .05);
+  color: rgba(212, 175, 55, .13);
   animation: swim-left 19s linear infinite;
   animation-delay: 9s;
   transform: scaleX(-1);
 }
 .shark.s7 {
   width: 160px; top: 50%; left: -160px;
-  color: rgba(212, 175, 55, .04);
+  color: rgba(212, 175, 55, .10);
   animation: swim-right 23s linear infinite;
   animation-delay: 12s;
 }
 .shark.s8 {
   width: 110px; top: 65%; left: -110px;
-  color: rgba(212, 175, 55, .07);
+  color: rgba(212, 175, 55, .16);
   animation: swim-right 16s linear infinite;
   animation-delay: 5s;
 }
